--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Zalo\\": "app/zalo/"
         }
     },
     "autoload-dev": {
